Summary : 2021.09.17 신호등 레이싱 게임 ------------------------------------------------------------------------ Description - type : Feat - 게임 첫 시작 시 게임에 대한 설명을 해주는 paintGameHelpMsg 함수 구현. - 부스트 사용 시 부스트 On이 되었다는 메시지가 출력되는 기능 구현. ------------------------------------------------------------------------ - type : Fix - Shift 키를 누르면 부스트 모드가 되는데, 이때 단순히 this.speed * 2 로 처리를 해주고 있음. 이렇게 되면 shift키를 계속 누르면 속도가 끝없이 증가하기 때문에 CAR_MAX_SPEED , CAR_DEFAULT_SPEED 변수를 만들어서 사용함. 부스트가 되면 CAR_MAX_SPEED 만큼 증가할 수 없도록, 부스트 모드가 끝나면 CAR_DEFAULT_SPEED 로 돌아오도록 수정함. - 게임 시작 시 도움말을 보여주는 기능을 추가하였는데, 같은 css 클래스를 사용하다보니 게임 종료 모달창도 도움말 모달로 노출되는 문제가 발생함. 해당 문제 수정을 위해 도움말 모달, 도움말 콘텐트, 도움말 모달 게임시작 버튼, 게임 종료 모달, 게임종료 후 재시작 버튼 Element에 id를 부여함.

--- a/2021-09-12/css/style.css
+++ b/2021-09-12/css/style.css
@@ -88,9 +88,9 @@
     height: 100%;
 }
 
-.modal > .gameOverContent {
+.modal > .gameContent {
     background: rgba(199, 211, 221, 0.7);
-    width : 500px;
+    width : 550px;
     height : 300px;
     display: flex;
     justify-content: center;
